# patrol-robot

./: CMakeLists.txt  README.md  miketest.txt  package.xml  test.txt  test2.txt  test3.txt
color_tracker/: CMakeLists.txt  package.xml
color_tracker/src/: color_tracking.py
color_tracking/: ball_tracking.py
l515-pcl/: CMakeLists.txt  README.md  package.xml
l515-pcl/src/: pointcloud_sub.cpp
loc_cartographer/: CMakeLists.txt  package.xml
loc_cartographer/launch/: localization.launch
my_rtabmap/launch/: my.launch  my_copy.launch  my_icp_pointcloud_rtabmap.launch  my_icp_rtabmap.launch  my_rtabmap.launch
my_rtabmap/src/: filtered_odom.cpp
object_follower/: CMakeLists.txt  package.xml
object_follower/launch/: point_to_laser.launch
object_follower/src/: follower.cpp  test_colorpub.cpp
opencv-following/: CMakeLists.txt  package.xml
opencv-following/src/: following-oj.cpp
patrol_bringup/: CMakeLists.txt  package.xml
patrol_bringup/launch/: color-follower.launch  my_icp_rtabmap.launch  my_rtab_rgbd.launch  scout_map.launch  sleep-detection-go.launch
pcl_l515/: CMakeLists.txt  package.xml
realsense-occupancy/occupancy/launch/: cameras.launch
realsense-occupancy/occupancy/src/: MathUtil.cpp  (+9 more)
roll-out-car/: CMakeLists.txt  package.xml
roll-out-car/launch/: rollout.launch
roll-out-car/src/: go_circle.cpp  rollout.cpp  test_sleep_signal.cpp
ros-face-recognition/: README.md  install.sh
ros-face-recognition/launch/: ros-face-recognition.launch
ros-face-recognition/msg/: Box.msg
ros-face-recognition/scripts/: config.py  display.py  face_api.py  face_recognition_node.py
slam_cartographer/: CMakeLists.txt  package.xml
slam_cartographer/config/: assets_writer_backpack_2d.lua  summit.lua
slam_cartographer/launch/: carto-nodelet.launch  carto.launch  cartolaunch.launch
sleeping_detect/: CMakeLists.txt  package.xml
sleeping_detect/arduino_code/: serial_for_detection.ino
(+15 files in other folders)
